infra/cloudformation/resources/router.yml
Description:
  This template deploys routers for Kubernetess cluster.


Parameters:
  ServiceName:
    Description: service's name
    Type: String


Resources:
  PubRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-VPC
      Tags:
        - Key: Name
          Value: !Sub PublicRouteTable for ${ServiceName}

  PubRouter:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PubRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Fn::ImportValue: !Sub ${ServiceName}-InternetGateway

  PubRouterAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRT
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PublicSubnet1

  PubRouterAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRT
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PublicSubnet2

  PubRouterAssociationMaster:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRT
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PublicSubnetMaster

  PriRT1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-VPC
      Tags:
        - Key: Name
          Value: !Sub PrivateRouteTable1 for ${ServiceName}

  PriRouter1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PriRT1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::ImportValue: !Sub ${ServiceName}-NATGateway1

  PriRouterAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PriRT1
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PrivateSubnet1


  PriRT2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-VPC
      Tags:
        - Key: Name
          Value: !Sub PrivateRouteTable2 for ${ServiceName}

  PriRouter2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PriRT2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::ImportValue: !Sub ${ServiceName}-NATGateway2
q
  PriRouterAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PriRT2
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PrivateSubnet2

  PriRTMaster:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-VPC
      Tags:
        - Key: Name
          Value: !Sub PrivateRouteTableMaster for ${ServiceName}

  PriRouterMaster:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PriRTMaster
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::ImportValue: !Sub ${ServiceName}-NATGatewayMaster

  PriRouterAssociationMaster:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PriRTMaster
      SubnetId:
        Fn::ImportValue: !Sub ${ServiceName}-PrivateSubnetMaster
